--- a/src/index.scss
+++ b/src/index.scss
@@ -11,4 +11,16 @@
 
 div.App {
   font-size: 62.5%;
+
+  height: 100vh;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: rgb(200, 200, 200);
+}
+
+li {
+  list-style: none;
 }
